docs/0.14/_sources/api/gammapy.modeling.models.ConstantTemporalModel.rst.txt
ConstantTemporalModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ConstantTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ConstantTemporalModel.parameters
      ~ConstantTemporalModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~ConstantTemporalModel.copy
      ~ConstantTemporalModel.create
      ~ConstantTemporalModel.evaluate_norm_at_time
      ~ConstantTemporalModel.from_dict
      ~ConstantTemporalModel.sample_time
      ~ConstantTemporalModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate_norm_at_time
   .. automethod:: from_dict
   .. automethod:: sample_time
   .. automethod:: to_dict
